# rinha-de-backend-2024-q1-rust

./: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  nginx.conf
.sqlx/: query-0cb97bcea91a96586f02444d14594b10f969f0897bb5be55c9620f004cbaa870.json  query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json  query-353268b7894698d82068a9e98fda091c07b72c3e835f7b7ffb69389d38059190.json  query-6291747d22a24c4b5177e43810ed32634e9e3a0aba47328ba86612d7554d4838.json  query-6d8a358f9e6d95ed2596107ca9985076cbe21eabcc4d42793df65c4449eac8ac.json  query-6e9da79f37468224074b0563b5ce466ff36e8d87c4ad48ec55d24ae3b665cd98.json  query-833eb03aac9b49f49d578c41d48dd98a2b3fd9470302544c18f8e85fa483b96e.json  query-8623ac4b3d6496f8277253caf816d3763965d17d789c996606890999d2b16837.json  query-cf446fa552bb0763d445c9fc9caef919e9ef36ee4f63d216baf3f1e0c37091af.json  query-e818c2a2c4800224b29283b56eb5a7aa31f69f1cfa9943f5f95c7153022c1605.json
migrations/: 20240213183815_init.sql
src/: handler.rs  main.rs  model.rs  route.rs  schema.rs
